# matrix-server

./: .gitignore  README.md  build.gradle  settings.gradle
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.core/: savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
.metadata/.plugins/org.eclipse.m2e.core/: matrixPerf.lifecyclemapping  workspacestate.properties
.metadata/.plugins/org.eclipse.m2e.jdt/: matrixPerf.container
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
.metadata/.plugins/org.eclipse.wst.xml.core/: system_catalog.xml
matrixModel/: build.gradle
matrixPerf/: build.gradle  keepme.txt  pom.xml
matrixPerf/src/main/resources/: gatling.conf
matrixPerf/src/test/resources/: body.json
matrixPerf/src/test/scala/: AsyncCxfScenario.scala  AsyncScenario.scala  MongoSyncScenario.scala  Simulation.scala  SyncScenario.scala
matrixServer/: build.gradle
matrixServerCxf/: build.gradle
matrixServerCxf/src/main/resources/: ehcache.xml  ff4j.xml  logback.xml
matrixServerExpress/: app.js  package.json
matrixServerMvc/: build.gradle
matrixServerRust/: Cargo.toml  Cargo.toml~
matrixServerRust/src/: main.rs  main.rs~
src/main/groovy/: script.groovy
src/main/resources/: application.properties
(+83 files in other folders)
