[package]
name = "matrixServerRust"
version = "0.1.0"
authors = ["elkouhen <mehdi.elkouhen@gmail.com>"]

[dependencies]
iron = "*"
router = "*"
rustc-serialize = "*"
hyper = "*" 

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"

[dependencies.persistent]
git = "https://github.com/iron/persistent.git"
